2006-04-02  Florian Boor <florian.boor@kernelconcepts.de>

	* ui.c: Make text more consistent, improve usage of stock icons.
	* autogen.sh: Use system automake without version. Versions need to be checked or handled on build machine.
	* Makefile.am: Add i18n support, fix comments.
	* po/*, tp, configure.ac: Add i18n again.

2006-03-21 Philippe De Swert <philippedeswert@scarlet.be>

	* Added todo integration and other improvements. Big thanks to Michele Giorgini <md6604@mclink.it>
	* corrected bug that made the maemo journal stuff show up in GPE

2006-03-11 Philippe De Swert <philippedeswert@scarlet.be>

	* Big overhaul. Credits and thanks to Michele Giorgini <md6604@mclink.it>

2006-01-10 Philippe De Swert <philippedeswert@scarlet.be>

	* release 0.21: because of important bugfixes by florian and imminent release of familiar 0.8.30

2006-01-05  Florian Boor <florian.boor@kernelconcepts.de>

	* html.c: Remove debug code, minor formating change.
	* sql.c, sql.h, main.c: Change scan_journal() parameter, fix memory leak
	 and journal generation.
	* main.c: Add quit button, replace ancient gtk object stuff.
	* main.c: Set window default size.

2006-01-02 Philippe De Swert <philippedeswert@scarlet.be>

	* release 0.20
	* Makefile : bump version number 
	* main.c : avoid confusing user depending on selection and avoiding the creation
		   of strange subtasks
	* html.c : Add footer with time total

2005-12-16 Philippe De Swert <philippedeswert@scarlet.be>

	* main.c : remove badly placed ifdefs that made logging non-functional
	* main.c : Added warning box if the user clicks the journal button without selecting an entry

2005-12-06 Philippe De Swert <philippedeswert@scarlet.be>
	
	* release version 0.19
	* gpe-timesheet.css : Added css for the html output (a thank you to my brother Michael for the help with this)
	* Makfile : adding install code for css file
	* html.c : adding code for including the css in the html output
	* main.c : added code to support help 
